# wordchart

./: CMakeLists.txt  README.md
examples/: file.txt
qml/: Main.qml
src/: fileprocessor.cpp  fileprocessor.h  main.cpp  wordchartmodel.cpp  wordchartmodel.h
